src/styles/styles.scss
/* Variables */
$vin-blue: #5bb7db;
$vin-green: #60b044;
$vin-red: #ff0000;

/* Styles */
body {
  font: 14px 'Roboto', Helvetica, Arial, sans-serif;
  line-height: 1.4em;
  color: #4d4d4d;
  margin: 0 auto;
  -webkit-font-smoothing: antialiased;
  -moz-font-smoothing: antialiased;
  font-smoothing: antialiased;
  font-weight: 300;
}

td {
	padding: 0px;
  padding-right: 16px;
}

h2 {
	color: $vin-blue;
}

table.search_results {
  width:100%;
}

table.search_results th {
  background-color: $vin-blue;
}

table.search_results tr:nth-child(even) {
  background-color: #eee;
}
table.search_results tr:nth-child(odd) {
  background-color:#fff;
}

div.main_section {
  padding-left:16px;
  zIndex: 0;
  padding-right:16px;
  width: '100%';
  color: 'red';
}

div.proforma {
  margin-right:8px;
  margin-left:8px;
}

div.proforma .form_input {
  margin-right:12px;
}

